Troubleshoot tables extend out of screen issue

--- a/static/css/myStyle.css
+++ b/static/css/myStyle.css
@@ -209,10 +209,12 @@ button {
 
 }
 
-#myTable td {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    min-width: 300px;
+@@media all{
+    #myTable td {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 300px;
+    }
 }
 
 .datatable_wrap {
